# amcoff-bostader

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  bun.lockb  fly.toml  next.config.mjs  package.json  tailwind.config.ts
afbostader/: Cargo.toml  README.md
afbostader/src/: error.rs  lib.rs  model.rs  property.json
afbostader/src/model/: product.rs  property.rs  user.rs
api/: Cargo.toml
api/src/: floorplan.rs  lib.rs  main.rs
archive/: Cargo.toml
archive/src/: git.rs  lib.rs  main.rs  read.rs
client/: Cargo.toml
client/src/: lib.rs  model.rs  product.json  productDetail.json
client/src/model/: area.rs  product.rs  property.rs  user.rs
frontend/: .prettierignore  bun.lockb  package.json
frontend/src/app/bostad/[id]/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/konto/: page.tsx
frontend/src/components/: AreaPictures.tsx  AuthContext.tsx  FilterContext.tsx  Footer.tsx  LoginButton.tsx  QueryClientProvider.tsx  QueueChart.tsx  QueuePosition.tsx
frontend/src/components/Header/: AuthSection.tsx  NavLink.tsx  index.tsx
frontend/src/components/VacancyGrid/: VacancyCell.tsx
frontend/src/components/VacancyMap/: Map.tsx  index.tsx
frontend/src/components/floorplan/: FloorplanButton.tsx  VacancyFloorplan.tsx
frontend/src/lib/: af.ts  hooks.ts  utils.ts
logger/: Cargo.toml
logger/src/: main.rs
server/: Cargo.toml
server/src/: floorplan.rs  main.rs
src/app/: layout.tsx  page.tsx
src/app/api/vacancies/: route.ts
src/app/history/: page.tsx
src/components/: AuthContext.tsx  Footer.tsx  Header.tsx  LoginButton.tsx  QueryClientProvider.tsx  QueueChart.tsx  VacancyContext.tsx  VacancyFloorplan.tsx  VacancyTable.tsx
src/components/Header/: AuthSection.tsx  NavLink.tsx  index.tsx
src/components/VacancyGrid/: Filter.tsx  VacancyCell.tsx  index.tsx
src/components/VacancyMap/: Map.tsx  index.tsx
src/components/VacancyTable/: VacancyRow.tsx  index.tsx
src/lib/: af.ts  hooks.ts
src/lib/hooks/: useBreakpoints.ts
