[package]
name = "client-af"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
reqwest-middleware = "0.3.2"
reqwest-retry = "0.6.0"
secrecy = "0.8.0"
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.62"
time = { version = "0.3.36", features = ["serde", "parsing", "macros", "formatting"] }

[dev-dependencies]
serde_json = "1.0.120"
