[package]
name = "logger"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive", "env"] }
client-af = { version = "0.1.0", path = "../client" }
dotenvy = "0.15.7"
git2 = "0.19.0"
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
