[package]
name = "afbostader-server"
version = "0.1.0"
edition = "2021"
authors = ["Åke Amcoff <ake@amcoff.net>"]

[dependencies]
axum = "0.7.5"
reqwest = { version = "0.12.5", features = ["json", "rustls-tls"] }
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.62"
tokio = { version = "1.38.0", features = ["full"] }
tower = { version = "0.4.13", features = ["buffer", "limit"] }
tower-http = { version = "0.5.2", features = ["cors", "limit"] }
