[package]
name = "afbostader-server"
version = "0.1.0"
edition = "2021"
authors = ["Åke Amcoff <ake@amcoff.net>"]

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["cookie-private", "typed-header"] }
clap = { version = "4.5.9", features = ["derive", "env"] }
afbostader = { path = "../afbostader" }
dotenvy = "0.15.7"
headers = "0.4.0"
image = { version = "0.25.2", default-features = false }
pdfium-render = "0.8.22"
reqwest = { version = "0.12.5", features = ["json", "rustls-tls"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.62"
tokio = { version = "1.38.0", features = ["full"] }
tower = { version = "0.4.13", features = ["buffer", "limit"] }
tower-http = { version = "0.5.2", features = ["cors", "limit"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
